# AIJOBSTRENDS

./: LICENSE  README.md  __init__.py  analyzer.py  example.ipynb  plotter.py  pyproject.toml  sample_data.csv
aijobstrends/: __init__.py  plotter.py
